fix: local criu support for development (#1395)
<!-- This is an auto-generated description by cubic. -->

## Summary by cubic
Enables local CRIU checkpoint/restore in development on both x86_64 and
ARM64. Simplifies config to use local storage and makes workers fail
fast on task queue errors.

- **New Features**
- Build CRIU in the worker image for x86_64 and ARM64; skip GPU plugins
on ARM64 and only verify the CUDA plugin on x86_64.
- Enable CRIU by default; set checkpointPath to /data/checkpoints and
use local storage.

- **Bug Fixes**
- Exit the runner on unexpected task queue errors to avoid stuck
workers.

<!-- End of auto-generated description by cubic. -->

---------

Co-authored-by: Luke Lombardi <luke@beam.cloud>

--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -162,7 +162,8 @@ worker:
       priority: 1
       jobSpec:
         nodeSelector: {}
-      criuEnabled: false
+      criuEnabled: true
+      checkpointPath: /data/checkpoints
       poolSizing:
         defaultWorkerCpu: 1000m
         defaultWorkerGpuType: ""
@@ -231,13 +232,8 @@ worker:
   criu:
     mode: nvidia
     storage:
-      mountPath: /data/checkpoints
       mode: local
-      objectStore:
-        bucketName: beta9-checkpoints
-        accessKey: test
-        secretKey: test
-        endpointURL: http://localstack:4566
+      mountPath: /data/checkpoints
     cedana:
       # Can be unix, tcp, vsock
       protocol: unix
