--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -62,7 +62,7 @@ storage:
       cacheStreamingEnabled: false
 gateway:
   host: beta9-gateway
-  invokeURLType: host
+  invokeURLType: path
   grpc:
     externalHost: beta9-gateway
     externalPort: 1993
