--- a/manifests/kustomize/components/redis/helm-chart-generator.yaml
+++ b/manifests/kustomize/components/redis/helm-chart-generator.yaml
@@ -7,6 +7,7 @@ releaseName: *name
 name: redis
 repo: https://charts.bitnami.com/bitnami
 version: 18.9.1
+
 namespace: beta9
 includeCRDs: true
 skipTests: true
@@ -22,3 +23,7 @@ valuesInline:
       notify-keyspace-events AKE
     persistence:
       size: 1Gi
+  image:
+    registry: docker.io
+    repository: bitnamilegacy/redis
+    tag: 7.2.4-debian-11-r2
