update init container for postgres

--- a/manifests/kustomize/components/postgresql/helm-chart-generator.yaml
+++ b/manifests/kustomize/components/postgresql/helm-chart-generator.yaml
@@ -53,6 +53,12 @@ valuesInline:
           EOF
   volumePermissions:
     enabled: true
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/os-shell
+      tag: 12-debian-12-r51
+      digest: ""
+      pullPolicy: IfNotPresent
   persistence:
     enabled: true
     size: 1Gi
