--- a/manifests/kustomize/components/juicefs/helm-chart-generator.yaml
+++ b/manifests/kustomize/components/juicefs/helm-chart-generator.yaml
@@ -19,6 +19,10 @@ valuesInline:
   master:
     persistence:
       size: 1Gi
+  image:
+    registry: docker.io
+    repository: bitnamilegacy/redis
+    tag: 7.2.4-debian-11-r2
 ---
 apiVersion: builtin
 kind: HelmChartInflationGenerator
