--- a/manifests/kustomize/components/monitoring/elasticsearch.yaml
+++ b/manifests/kustomize/components/monitoring/elasticsearch.yaml
@@ -10,6 +10,10 @@ version: 21.3.1
 namespace: monitoring
 includeCRDs: true
 valuesInline:
+  image:
+    registry: docker.io
+    repository: bitnamilegacy/elasticsearch
+    tag: 9.1.2-debian-12-r0
   global:
     kibanaEnabled: true
   master:
