Fix: Pin Elastic Search image to Bitnami Legacy (#1446)
<!-- This is an auto-generated description by cubic. -->

## Summary by cubic
Pins the Elasticsearch image to the Bitnami Legacy repository for the
monitoring stack. Sets
docker.io/bitnamilegacy/elasticsearch:9.1.2-debian-12-r0 to ensure
stable, reproducible deployments.

<!-- End of auto-generated description by cubic. -->

--- a/manifests/kustomize/components/monitoring/elasticsearch.yaml
+++ b/manifests/kustomize/components/monitoring/elasticsearch.yaml
@@ -10,8 +10,19 @@ version: 21.3.1
 namespace: monitoring
 includeCRDs: true
 valuesInline:
+  image:
+    registry: docker.io
+    repository: bitnamilegacy/elasticsearch
+    tag: 9.1.2-debian-12-r0
   global:
     kibanaEnabled: true
+  sysctlImage:
+    enabled: false
+  kibana:
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/kibana
+      tag: 9.1.2-debian-12-r0
   master:
     masterOnly: false
     replicaCount: 1
