Integrate CLIPV2 build pipeline (#1463)
<!-- This is an auto-generated description by cubic. -->
---
## Summary by cubic
Integrates CLIP v2: builds images with buildah and publishes index-only
.clip archives, skipping the runc build flow. Adds end-to-end OCI
credentials for private layers so builds and workers can pull v2 image
content securely.

- **New Features**
- Added CLIP v2 pipeline: render Dockerfile, build with buildah, push to
a build registry, index via CreateFromOCIImage, and skip runc for build
containers.
- V2 Dockerfile rendering with standard pip (no uv-b9); coalesces
pip/mamba steps; respects custom Dockerfile FROM and uses provided creds
for authenticated base pulls; skips Python install for beta9 base
images.
- Deterministic image IDs updated for v2 (Dockerfile included); separate
base image ID for v1.
- Worker reads container config (env, user, workdir, entrypoint/cmd)
from CLIP archive metadata for v2 and writes initial_config.json; caches
source image refs; no runtime skopeo.
- Pull path handles OCI vs S3 .clip formats; canonicalizes v2 index
path; S3 fallback if local store miss.
- Config: default clipVersion=2, new buildRegistry and
buildRegistryInsecure flags; improved TLS handling for localhost
registries; enable blobcache by default.
- Ensures /workspace and /volumes exist via the overlay upper layer;
hardens overlay mounts with fuse-overlayfs fallback.
- Pass OCI registry credentials at runtime (Linear 7278): create
workspace secrets during build, store on the image, scheduler attaches
image_credentials, worker uses them for lazy layer pulls.
- V2 builds support ENV lines and build secrets (as build-args) in
generated/appended Dockerfiles and pass them to buildah.

- **Migration**
  - Ensure buildah and skopeo are installed on workers.
- Set imageService.buildRegistry (and buildRegistryInsecure for
localhost) so build/push/index works.
- Run migration 036_add_image_credential_fields to add image credential
secret references.
  - If forcin

--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -1,5 +1,5 @@
 clusterName: beta9
-debugMode: false
+debugMode: true
 prettyLogs: true
 database:
   postgres:
@@ -100,8 +100,12 @@ imageService:
   # In the worst case, we have seen 10gb images take 20 minutes. That is 1e+10 bytes taking 1200 seconds.
   # That gives 1200 / 1e+10 = 120 ns per byte.
   archiveNanosecondsPerByte: 120
+  # Default to clip v2 (index-only OCI archives). Set to 1 to force legacy.
+  clipVersion: 2
   registryStore: local
   registryCredentialProvider: docker
+  buildRegistry: registry.localhost:5000
+  buildRegistryInsecure: true
   buildContainerPoolSelector: build
   pythonVersion: python3.10
   registries:
@@ -216,7 +220,7 @@ worker:
   terminationGracePeriod: 30
   cleanupWorkerInterval: 1m
   cleanupPendingWorkerAgeLimit: 10m
-  blobCacheEnabled: false
+  blobCacheEnabled: true
   containerLogLinesPerHour: 6000
   failover:
     enabled: true
@@ -255,6 +259,34 @@ worker:
       criu:
         # Keep the job running after checkpoint
         leave_running: true
+
+blobcache:
+  global:
+    coordinatorHost: blobcache.beta9.svc.cluster.local:2049
+    defaultLocality: default
+    serverPort: 2049
+    discoveryIntervalS: 5
+    rttThresholdMilliseconds: 1000
+    hostStorageCapacityThresholdPct: 0.95
+    grpcDialTimeoutS: 1
+    grpcMessageSizeBytes: 1073741824 # 1GB
+    debugMode: false
+    prettyLogs: true
+  client:
+    nTopHosts: 3
+    minRetryLengthBytes: 10000000 # 10MB
+    maxGetContentAttempts: 3
+    token:
+    blobfs:
+      maxBackgroundTasks: 256
+      maxReadAheadKB: 1024
+      maxWriteKB: 1024
+      enabled: true
+      mountPoint: /cache
+      directIO: false
+      directMount: false
+      options:
+      - max_read=1048576
 
 providers:
   ec2:
