--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -105,6 +105,7 @@ imageService:
   registryStore: local
   registryCredentialProvider: docker
   buildRegistry: registry.localhost:5000
+  buildRepositoryName: beta9-users
   buildRegistryInsecure: true
   buildContainerPoolSelector: build
   pythonVersion: python3.10
