--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -155,7 +155,7 @@ worker:
       mode: local
       priority: 1
       # runtime: ""  # Optional: Kubernetes RuntimeClass for the pod (e.g., "nvidia")
-      containerRuntime: gvisor  # Internal OCI runtime: "runc" or "gvisor"
+      containerRuntime: runc  # Pool-specific container runtime: "runc" or "gvisor"
       containerRuntimeConfig:
         gvisorPlatform: systrap
         gvisorRoot: /run/gvisor
@@ -174,7 +174,7 @@ worker:
       mode: local
       requiresPoolSelector: true
       # runtime: ""  # Optional: Kubernetes RuntimeClass for the pod
-      containerRuntime: runc  # Internal OCI runtime: "runc" or "gvisor"
+      containerRuntime: runc  # Pool-specific container runtime: "runc" or "gvisor"
       containerRuntimeConfig:
         gvisorPlatform: systrap
         gvisorRoot: /run/gvisor
@@ -194,7 +194,7 @@ worker:
     #   mode: local
     #   gpuType: any
     #   runtime: nvidia  # Kubernetes RuntimeClass for GPU support
-    #   containerRuntime: gvisor  # Internal OCI runtime
+    #   containerRuntime: gvisor  # Pool-specific container runtime: "runc" or "gvisor"
     #   containerRuntimeConfig:
     #     gvisorPlatform: systrap
     #     gvisorRoot: /run/gvisor
